# Checksum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/checksum/: __init__.py  __main__.py  __version__.py
tests/: test_main.py
tests/fixtures/: misformatted-160.sums  missing-160.sums  sha160.sums  sha256.sums  tag160.sums  tag256.sums
